--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -109,11 +109,14 @@ if(VISUALIZE_USING_QT)
     target_link_libraries(visualize_histograms_from_file Qt5::Widgets Qt5::Xml )
 endif()
 
-if(VISUALIZE)
-    add_executable(visualize_graph_and_image visualize_graph_and_image.cpp)
-    target_link_libraries(visualize_graph_and_image SGVisualize)
-    target_link_libraries(visualize_graph_and_image ${ITK_LIBRARIES} )
-    # target_link_libraries(visualize_graph_and_image Qt5::Widgets Qt5::Xml )
+
+if(${_modern_VTK_available})
+    if(VISUALIZE)
+        add_executable(visualize_graph_and_image visualize_graph_and_image.cpp)
+        target_link_libraries(visualize_graph_and_image SGVisualize)
+        target_link_libraries(visualize_graph_and_image ${ITK_LIBRARIES} )
+        # target_link_libraries(visualize_graph_and_image Qt5::Widgets Qt5::Xml )
+    endif()
 endif()
 
 if(VISUALIZE)
