Add generate module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ option(SG_MODULE_ANALYZE "Analyze the graph properties." ON)
 option(SG_MODULE_COMPARE "Logic to compare and merge low and high information graphs." ON)
 option(SG_MODULE_LOCATE "Use VTK KDtree for graph point location." ON)
 option(SG_MODULE_VISUALIZE "Functions to visualize spatial graphs and histograms." ON)
+option(SG_MODULE_GENERATE "Generate a graph with desired statistical parameters using simulated annealing." ON)
 CMAKE_DEPENDENT_OPTION(SG_MODULE_VISUALIZE_ENABLE_QT "Use QT for some visualizations" ON
   "SG_MODULE_VISUALIZE" ON)
 option(VISUALIZE "Enable visualization with VTK." OFF)
@@ -178,6 +179,9 @@ if(SG_MODULE_COMPARE)
 endif()
 if(SG_MODULE_VISUALIZE)
   add_subdirectory(modules/visualize)
+endif()
+if(SG_MODULE_GENERATE)
+  add_subdirectory(modules/generate)
 endif()
 
 if(SG_BUILD_SCRIPTS)
