--- a/modules/generate/CMakeLists.txt
+++ b/modules/generate/CMakeLists.txt
@@ -9,7 +9,9 @@ set(SG_MODULE_${SG_MODULE_NAME}_DEPENDS
 set(SG_MODULE_${SG_MODULE_NAME}_SOURCES
     generate_common.cpp
     simulated_annealing.cpp
+    update_step.cpp
     update_step_move_node.cpp
+    update_step_swap_edges.cpp
     )
 list(TRANSFORM SG_MODULE_${SG_MODULE_NAME}_SOURCES PREPEND "src/")
 add_library(${SG_MODULE_${SG_MODULE_NAME}_LIBRARY} ${SG_MODULE_${SG_MODULE_NAME}_SOURCES})
