--- a/modules/generate/test/CMakeLists.txt
+++ b/modules/generate/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_histograms_in_generate.cpp
   test_simulated_annealing.cpp
   test_update_step_move_node.cpp
+  test_update_step_swap_edges.cpp
   )
 
 SG_add_gtests()
