C++17 required. Add TBB dependency (generate module)
Add TBB dependency (intel-tbb) to the module: generate

Used by gcc for std::execution:parallel

--- a/modules/generate/CMakeLists.txt
+++ b/modules/generate/CMakeLists.txt
@@ -1,9 +1,11 @@
+find_package(TBB REQUIRED) # For c++17 std::execution::par_unseq
 set(SG_MODULE_NAME "Generate")
 set(SG_MODULE_${SG_MODULE_NAME}_LIBRARY "SG${SG_MODULE_NAME}")
 list(APPEND SG_LIBRARIES ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY})
 set(SG_MODULE_INTERNAL_DEPENDS SGCore)
 set(SG_MODULE_${SG_MODULE_NAME}_DEPENDS
   ${SG_MODULE_INTERNAL_DEPENDS}
+  ${TBB_LIBRARIES}
   ${Boost_LIBRARIES}
   histo)
 set(SG_MODULE_${SG_MODULE_NAME}_SOURCES
