CMake: Add option to use Valgrind in tests.
Use with `-T memcheck` option:
`ctest -R xxx -V -T memcheck`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 include(CMakeDependentOption)
 option(SG_BUILD_SCRIPTS "Build cpp-scripts." ON)
 option(SG_BUILD_TESTING "Enable Tests" ON)
+option(SG_BUILD_ENABLE_VALGRIND "Enable Valgrind as a memchecker for tests (require debug symbols)" OFF)
+mark_as_advanced(SG_BUILD_ENABLE_VALGRIND)
 option(SG_MODULE_ANALYZE "Analyze the graph properties." ON)
 option(SG_MODULE_COMPARE "Logic to compare and merge low and high information graphs." ON)
 option(SG_MODULE_LOCATE "Use VTK KDtree for graph point location." ON)
@@ -141,6 +143,12 @@ export(TARGETS histo
   APPEND FILE ${sgext_export_file})
 
 if(SG_BUILD_TESTING)
+  if(SG_BUILD_ENABLE_VALGRIND)
+    find_program(MEMORYCHECK_COMMAND valgrind)
+    set(MEMORYCHECK_COMMAND_OPTIONS "--trace-children=yes --leak-check=full")
+    set(MEMORYCHECK_SUPPRESSIONS_FILE "${CMAKE_CURRENT_BINARY_DIR}/valgrind_suppress.txt")
+    include(Dart)
+  endif()
   enable_testing()
   set(GTEST_LIBRARIES gtest gtest_main gmock)
   include(GoogleTest)
