--- a/modules/generate/CMakeLists.txt
+++ b/modules/generate/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SG_MODULE_${SG_MODULE_NAME}_SOURCES
     update_step_move_node.cpp
     update_step_swap_edges.cpp
     degree_viger_generator.cpp
+    degree_sequences.cpp
     )
 list(TRANSFORM SG_MODULE_${SG_MODULE_NAME}_SOURCES PREPEND "src/")
 add_library(${SG_MODULE_${SG_MODULE_NAME}_LIBRARY} ${SG_MODULE_${SG_MODULE_NAME}_SOURCES})
