Wrap spatial_graph_io and edge_points_utilities

--- a/modules/core/wrap/CMakeLists.txt
+++ b/modules/core/wrap/CMakeLists.txt
@@ -4,5 +4,7 @@ pybind11_add_module(sgcore
   spatial_node_pybind.cpp
   spatial_edge_pybind.cpp
   spatial_graph_pybind.cpp
+  spatial_graph_io_pybind.cpp
+  edge_points_utilities_pybind.cpp
   )
 target_link_libraries(sgcore PRIVATE SGCore)
