CMake: Use GNUInstallDirs. Change install dir for cmake files
The CMake files are now in ${CMAKE_INSTALL_LIBDIR}/cmake/sgext
instead of non-default: lib/sgext/cmake

GNUInstallDirs automatically define default variables CMAKE_INSTALL_xxx
for different distros and other OS's

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ message(STATUS "SGEXT version: ${SGEXT_VERSION}")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+include(GNUInstallDirs) # Define CMAKE_INSTALL_xxx: LIBDIR, INCLUDEDIR
 
 include(CMakeDependentOption)
 option(SG_BUILD_SCRIPTS "Build cpp-scripts." ON)
@@ -131,19 +132,20 @@ set(sgext_export_file "${PROJECT_BINARY_DIR}/SGEXTTargets.cmake")
 
 set(HISTO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/histo/include
         CACHE PATH "histo include directory")
-install(DIRECTORY ${HISTO_INCLUDE_DIR}/ DESTINATION include/sgext)
+set(HISTO_INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_INCLUDEDIR}/sgext)
+install(DIRECTORY ${HISTO_INCLUDE_DIR}/ DESTINATION ${HISTO_INSTALL_INCLUDE_DIR})
 
 # for convenience setup a target
 add_library(histo INTERFACE)
 target_include_directories(histo INTERFACE
     $<BUILD_INTERFACE:${HISTO_INCLUDE_DIR}>
-    $<INSTALL_INTERFACE:include/sgext>)
+    $<INSTALL_INTERFACE:${HISTO_INSTALL_INCLUDE_DIR}>)
 
 # need to export target as well
 # this exports library: histo
 install(TARGETS histo
   EXPORT SGEXTTargets
-  DESTINATION include)
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 # export to the build tree
 export(TARGETS histo
@@ -221,11 +223,11 @@ endif()
 
 install (EXPORT SGEXTTargets
   NAMESPACE SGEXT::
-  DESTINATION lib/sgext/cmake )
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/sgext )
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cmake/SGEXTConfig.cmake
               ${CMAKE_CURRENT_BINARY_DIR}/SGEXTConfigVersion.cmake
-              DESTINATION lib/sgext/cmake )
+              DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/sgext )
 
 include(CMakePackageConfigHelpers)
 
@@ -238,18 +240,18 @@ set(SGEXT_TARGETS_FILE ${sgext_export_file})
 configure_package_config_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/cmake/SGEXTConfig.cmake.in
   ${CMAKE_CURRENT_BINARY_DIR}/SGEXTConfig.cmake
-  INSTALL_DESTINATION lib/sgext/cmake
+  INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/sgext
   PATH_VARS SGEXT_TARGETS_FILE
   NO_CHECK_REQUIRED_COMPONENTS_MACRO # SGEXT does not provide components
   INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}
   )
 
 # Install tree
-set(SGEXT_TARGETS_FILE ${CMAKE_INSTALL_PREFIX}/lib/sgext/cmake/SGEXTTargets.cmake)
+set(SGEXT_TARGETS_FILE ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/cmake/sgext/SGEXTTargets.cmake)
 configure_package_config_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/cmake/SGEXTConfig.cmake.in
   ${CMAKE_CURRENT_BINARY_DIR}/cmake/SGEXTConfig.cmake
-  INSTALL_DESTINATION lib/sgext/cmake
+  INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/sgext
   PATH_VARS SGEXT_TARGETS_FILE
   NO_CHECK_REQUIRED_COMPONENTS_MACRO # SGEXT does not provide components
   )
