--- a/modules/locate/CMakeLists.txt
+++ b/modules/locate/CMakeLists.txt
@@ -31,13 +31,13 @@ endif()
 
 install(TARGETS ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
         EXPORT SGEXTTargets
-        RUNTIME DESTINATION bin
-        LIBRARY DESTINATION lib
-        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
         )
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
-  DESTINATION include/sgext
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/sgext
   PATTERN "*.txt" EXCLUDE)
 
 # export to the build tree
