Modularize python tests
Add python tests (with unittest) to cmake

Run with `ctest -R python-test-* -V`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ message(STATUS "SGEXT version: ${SGEXT_VERSION}")
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 include(GNUInstallDirs) # Define CMAKE_INSTALL_xxx: LIBDIR, INCLUDEDIR
+set(CMAKE_INSTALL_PYTHONLIBDIR python) # Install folder for python libs
 
 include(CMakeDependentOption)
 option(SG_BUILD_SCRIPTS "Build cpp-scripts." ON)
