Add a ctest per python test file using unittest discovery
Instead of adding only one ctest per module in python

--- a/modules/core/wrap/CMakeLists.txt
+++ b/modules/core/wrap/CMakeLists.txt
@@ -14,12 +14,24 @@ target_link_libraries(${SG_MODULE_PYTHON_NAME} PRIVATE ${module_lib_})
 install(TARGETS ${SG_MODULE_PYTHON_NAME}
   DESTINATION ${CMAKE_INSTALL_PYTHONLIBDIR})
 
+
 if(SG_BUILD_TESTING)
+  set(test_folder "${CMAKE_CURRENT_SOURCE_DIR}/test_python")
+  set(python_tests_
+    test_array3d.py
+    test_edge_points_utilities.py
+    test_graph.py
+    test_spatial_graph_io.py
+  )
+
   # test files should start with "test_"
   # unittest functions (in .py) should start with "test_" for discover to work
-  add_test(NAME python-test-${SG_MODULE_PYTHON_NAME}
-    COMMAND ${PYTHON_EXECUTABLE}
-      -m unittest discover
-      -s ${CMAKE_CURRENT_SOURCE_DIR}/test_python
-  )
+  foreach(python_test ${python_tests_})
+      add_test(NAME python||${SG_MODULE_PYTHON_NAME}||${python_test}
+        COMMAND ${PYTHON_EXECUTABLE}
+          -m unittest discover
+          -s ${test_folder}
+          -p ${python_test}
+      )
+  endforeach()
 endif()
