Refactor: move wrapping outside modules
The module structure wasn't a good fit for pybind11
This refactor centralize the wrapping into a folder, with only
one module (sgext), and all the cpp modules are moved into python
submodules.

Also add a __init__.py in a sgext folder with a simple:
```
from ._sgext import *
```
that expose all the pybind content into a sgext python module

TODO: python development test are not working
change imports and check if a simlink or
use relative import for
`ctest -R python -V` to work straight away

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 include(GNUInstallDirs) # Define CMAKE_INSTALL_xxx: LIBDIR, INCLUDEDIR
 set(CMAKE_INSTALL_PYTHONLIBDIR sgext) # Install folder for python libs
+# Copy python libs to a single location at build time (for ease of use)
+set(CMAKE_BUILD_PYTHONLIBDIR ${PROJECT_BINARY_DIR}/sgext) # copy python libs at build time
 
 include(CMakeDependentOption)
 option(SG_BUILD_SCRIPTS "Build cpp-scripts." ON)
@@ -222,6 +224,12 @@ if(SG_BUILD_SCRIPTS)
   add_subdirectory(cpp-scripts)
 endif()
 
+# WRAPPING
+if(SG_WRAP_PYTHON)
+  add_subdirectory(wrap)
+endif()
+
+# INSTALL
 set(install_cmake_dir "${CMAKE_INSTALL_LIBDIR}/cmake/sgext")
 
 install (EXPORT SGEXTTargets
