Add more forces and simple particle structures
Also add function to convert graph into particles
plus a connected_list per particle

--- a/modules/dynamics/CMakeLists.txt
+++ b/modules/dynamics/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SG_MODULE_${SG_MODULE_NAME}_DEPENDS
   )
 set(SG_MODULE_${SG_MODULE_NAME}_SOURCES
     dynamics.cpp
+    dynamics_graph_glue.cpp
     )
 list(TRANSFORM SG_MODULE_${SG_MODULE_NAME}_SOURCES PREPEND "src/")
 add_library(${SG_MODULE_${SG_MODULE_NAME}_LIBRARY} ${SG_MODULE_${SG_MODULE_NAME}_SOURCES})
