--- a/modules/dynamics/test/CMakeLists.txt
+++ b/modules/dynamics/test/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   ${GTEST_LIBRARIES})
 set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_dynamics.cpp
+  test_particle_graph_glue.cpp
   )
 
 SG_add_gtests()
