Add Integrator and VerletVelocitiesMethod

--- a/modules/dynamics/test/CMakeLists.txt
+++ b/modules/dynamics/test/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
   ${SG_MODULE_${SG_MODULE_NAME}_DEPENDS}
-  ${GTEST_LIBRARIES})
+  ${GTEST_LIBRARIES}
+  )
 set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_dynamics.cpp
   test_particle_graph_glue.cpp
+  test_integrator.cpp
   )
 
 SG_add_gtests()
