Add function to convert graph to a vtkUnstructuredGrid
convert_to_vtk_unstructured_grid
Includes degree, end_to_end_distance, contour_lenght, vertex_id

There are two functions, the first  using a vtkLine to represent
the edges (without edge_points information, just the contour length).

And the second using a vtkPolyLine to store edge_points

--- a/modules/visualize/CMakeLists.txt
+++ b/modules/visualize/CMakeLists.txt
@@ -29,6 +29,7 @@ endif()
 set(SG_MODULE_${SG_MODULE_NAME}_SOURCES
     ${qt_sources}
     convert_to_vtk_graph.cpp
+    convert_to_vtk_unstructured_grid.cpp
     visualize_common.cpp
     visualize_object.cpp
     visualize_spatial_graph.cpp
