--- a/wrap/test/CMakeLists.txt
+++ b/wrap/test/CMakeLists.txt
@@ -2,3 +2,6 @@ add_subdirectory(core)
 if(SG_MODULE_GENERATE)
   add_subdirectory(generate)
 endif()
+if(SG_MODULE_DYNAMICS)
+  add_subdirectory(dynamics)
+endif()
